# vector_store_db_rust

./: Cargo.toml  README.md
src/: main.rs  search.rs
