[package]
name = "vector_store_db"
version = "0.1.0"
edition = "2021"

[dependencies]
ollama-rs = "0.2.3"
pdf-extract = "0.8.0"
text-splitter = { version = "0.20.1", features = ["tokenizers"] }
tokenizers = { version = "0.21.0", features = ["http"] }
tokio = { version = "1.43.0", features = ["full"] }
